@@ -33,6 +33,35 @@ int game_board::check_tile_neighbors(int x, int y) {
     return num_bombs;
 }
 
+std::vector<tile *> game_board::get_tile_neighbors(int x, int y) {
+    std::vector<tile *> v;
+    if (in_bounds(x - 1, y - 1) && board[y - 1][x - 1]) {
+        v.push_back(board[y - 1][x - 1]);
+    }
+    if (in_bounds(x, y - 1)     && board[y - 1][x    ]) {
+        v.push_back(board[y - 1][x    ]);
+    }
+    if (in_bounds(x + 1, y - 1) && board[y - 1][x + 1]) {
+        v.push_back(board[y - 1][x + 1]);
+    }
+    if (in_bounds(x - 1, y)     && board[y    ][x - 1]) {
+        v.push_back(board[y    ][x - 1]);
+    }
+    if (in_bounds(x + 1, y)     && board[y    ][x + 1]) {
+        v.push_back(board[y    ][x + 1]);
+    }
+    if (in_bounds(x - 1, y + 1) && board[y + 1][x - 1]) {
+        v.push_back(board[y + 1][x - 1]);
+    }
+    if (in_bounds(x, y + 1)     && board[y + 1][x    ]) {
+        v.push_back(board[y + 1][x    ]);
+    }
+    if (in_bounds(x + 1, y + 1) && board[y + 1][x + 1]) {
+        v.push_back(board[y + 1][x + 1]);
+    }
+    return v;
+}
+
 game_board::game_board(int num_bombs) {
     int x, y;
     int n = 0;
@@ -50,7 +79,7 @@ game_board::game_board(int num_bombs) {
         x = rand() % BOARD_X;
         y = rand() % BOARD_Y;
         if (!board[y][x]) {
-            board[y][x] = new tile(true, -1);
+            board[y][x] = new tile(true, -1, x, y);
             //printf("%d: (%d, %d)\n", n, x, y);
             n++;
         }
@@ -59,7 +88,7 @@ game_board::game_board(int num_bombs) {
     for (y = 0; y < BOARD_Y; ++y) {
         for (x = 0; x < BOARD_X; ++x) {
             if (!board[y][x]) {
-                board[y][x] = new tile(false, check_tile_neighbors(x, y));
+                board[y][x] = new tile(false, check_tile_neighbors(x, y), x, y);
             }
         }
     }
