@@ -1,6 +1,8 @@
 #ifndef TILE_H
 #define TILE_H
 
+#include <vector>
+
 #define BOARD_X 20
 #define BOARD_Y 12
 
@@ -10,11 +12,16 @@ class tile {
 private:
     bool is_bomb;
     int value;
+    int x;
+    int y;
 
 public:
-    tile(bool is_bomb, int value) : is_bomb(is_bomb), value(value) {}
+    bool is_clicked;
+    tile(bool is_bomb, int value, int x, int y) : is_bomb(is_bomb), value(value), x(x), y(y), is_clicked(false) {}
     bool check_if_bomb() { return is_bomb; }
     int get_value() { return value; }
+    int get_x() { return x; }
+    int get_y() { return y; }
     ~tile() {}
 };
 
@@ -23,6 +30,7 @@ private:
     int num_bombs;
 
 public:
+    std::vector<tile *> get_tile_neighbors(int x, int y);
     int check_tile_neighbors(int x, int y);
     tile *board[BOARD_Y][BOARD_X];
     game_board(int num_bombs);
